Override (nested) package-json from 6.5.0 to 7.0.0
SassDoc is no longer being updated

The child dependency `package-json` can be upgraded manually to fix:

https://github.com/advisories/GHSA-pfrx-2q88-qq97

https://github.com/sindresorhus/package-json/releases/tag/v7.0.0

Breaking changes (compatible):

* Drops Node.js v8 and v10

https://github.com/sindresorhus/package-json/releases/tag/v8.0.0

Breaking changes (incompatible):

* Drops Node.js v12
* ESM module only

--- a/package.json
+++ b/package.json
@@ -115,6 +115,9 @@
     "glob-stream@^6": {
       "glob-parent": "^5"
     },
+    "latest-version@^5": {
+      "package-json": "^7"
+    },
     "postcss-unmq": {
       "postcss": "^7"
     },
