Override (nested) semver-regex from 1.0.0 to 3.1.4
SassDoc is no longer being updated

The child dependency `semver-regex` can be upgraded manually to fix:

https://github.com/advisories/GHSA-44c6-4v22-4mhx
https://github.com/advisories/GHSA-4x5v-gmq8-25ch

https://github.com/sindresorhus/semver-regex/releases/tag/v2.0.0

Breaking changes (compatible):

* Drops Node.js v0.10, v0.12 and v4

https://github.com/sindresorhus/semver-regex/releases/tag/v3.0.0

Breaking changes (compatible):

* Drops Node.js v6 and v8

--- a/package.json
+++ b/package.json
@@ -126,6 +126,9 @@
     },
     "postcss-unrgba": {
       "postcss": "^7"
+    },
+    "sass-convert": {
+      "semver-regex": "^3"
     }
   }
 }
