Override (nested) marked from 0.6.3 to 0.8.2
SassDoc is no longer being updated

The child dependency `marked` can be upgraded manually to fix:

https://github.com/advisories/GHSA-ch52-vgq2-943f

--- a/package.json
+++ b/package.json
@@ -129,6 +129,9 @@
     },
     "sass-convert": {
       "semver-regex": "^3"
+    },
+    "sassdoc-extras@^2": {
+      "marked": "^0.8.2"
     }
   }
 }
