Override (nested) glob-parent from 3.1.0 to 5.1.2
Gulp v4 is stuck on both `chokidar@2` and `glob-stream@6` to maintain compatibility with Node.js v0.10+

The shared child dependency `glob-parent` can be upgraded manually to fix:

https://github.com/advisories/GHSA-ww39-953v-wcq6

https://github.com/gulpjs/glob-parent/releases/tag/v4.0.0

Breaking changes (compatible):

* Enables `?` in globs on Windows

https://github.com/gulpjs/glob-parent/releases/tag/v5.0.0

Breaking changes (compatible):

* Drops Node.js v0.12 and v4

--- a/package.json
+++ b/package.json
@@ -109,6 +109,12 @@
     "wait-on": "^7.0.1"
   },
   "overrides": {
+    "chokidar@^2": {
+      "glob-parent": "^5"
+    },
+    "glob-stream@^6": {
+      "glob-parent": "^5"
+    },
     "postcss-unmq": {
       "postcss": "^7"
     },
